--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "dust3r"
 version = "0.1.0"
 description = "Forked DUSt3R package"
-readme = { text = "This is a minimal packaging stub for DUSt3R." }
+readme = "README.md"
 requires-python = ">=3.9"
 authors = [{ name = "SZucchini" }]
 dependencies = []
